k8s-manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-service
  namespace: default
  labels:
    app: member-service
spec:
  type: ClusterIP
  selector:
    app: member-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: integration-service
  namespace: default
  labels:
    app: integration-service
spec:
  type: ClusterIP
  selector:
    app: integration-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: default
  labels:
    app: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: wms-service
  namespace: default
  labels:
    app: wms-service
spec:
  type: ClusterIP
  selector:
    app: wms-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: default
  labels:
    app: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
