k8s-manifests/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-public
  namespace: default
  # annotations:
    # 해당 Ingress는 인증을 거치지 않는 public 엔드포인트를 위해 사용됩니다.
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /member/auth/login
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 8080
          - path: /member/auth/setup-password
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 8080
